// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate 1`] = `
"import { $route, createRoutes } from 'next-typed-path'

export const routes = createRoutes({
  about: $route,
  index: $route,
  users: {
    '[userId]': {
      index: $route,
      posts: {
        '[postId]': $route,
      },
    },
    index: $route,
  },
})
"
`;

exports[`generate 2`] = `
"import { $route, createRoutes } from 'next-typed-path'

export const routes = createRoutes({
  about: $route,
  index: $route,
  users: {
    '[userId]': {
      index: $route,
      posts: {
        '[postId]': $route,
      },
    },
    index: $route,
  },
})

export default routes
"
`;
